# remdeb

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  meson.build  meson_options.txt
android/: build-android.sh  build_armeabi-v7a.sh  cross_armeabi-v7a.ini  cross_armeabi-v7a.txt  install-ndk.sh
common/impl/: debug_server.cpp  debug_server.h
common/server/: debug_server.cpp  debug_server.h
impl/client/: debug_client.cpp  debug_client.h
impl/common/: logger.h  memory.h  packets.h  starter.h
impl/server/: debug_server.cpp  debug_server.h
jni/: loader.cpp
jni/utils/: android.cpp  android.h
net/: socket.cpp  socket.h
net/packet/: packet.h
net/socket/: packet_poller_socket.cpp  packet_poller_socket.h  socket.cpp  socket.h  socket_server.cpp  socket_server.h
src/: main.cpp
tests/: connect.py
